--- a/src/index.scss
+++ b/src/index.scss
@@ -6,5 +6,6 @@
 @use './scss//tools/media-queries';
 @use './scss/settings/breackpoints';
 
+@use './scss/generic/global';
 @use './scss//settings/elements';
 @use './scss/objects/badge';
