se ajusta filtro buscador por nombre y estilos ficha detalle personaje

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,9 +3,10 @@
 // @include meta.load-css('./scss/settings/breackpoints');
 // @include meta.load-css('./scss//settings/elements');
 // @include meta.load-css('./scss/objects/badge');
-@use './scss//tools/media-queries';
-@use './scss/settings/breackpoints';
+@use "./scss/settings/breackpoints";
+@use "./scss//tools/media-queries";
+@use "./scss//utilities/utilities";
 
-@use './scss/generic/global';
-@use './scss//settings/elements';
-@use './scss/objects/badge';
+@use "./scss/generic/global";
+@use "./scss//settings/elements";
+@use "./scss/objects/badge";
