--- a/src/characters/components/CharacterCard/characterCard.scss
+++ b/src/characters/components/CharacterCard/characterCard.scss
@@ -1,80 +1,86 @@
-.card__character{
-    text-align: center;
-    background: #0a53564f;
+@mixin tablet {
+  @media screen and (max-width: 900px) {
+    @content;
+  }
+}
+@mixin mobile {
+  @media screen and (max-width: 520px) {
+    @content;
+  }
+}
+.card__character {
+  text-align: center;
+  background: #0a53564f;
+  border-radius: 5px;
+  padding: 0px;
+  gap: 20px;
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+  position: relative;
+  @include mobile() {
+    width: 90%;
+  }
+  img {
     border-radius: 5px;
-    padding: 5px;
-    gap:20px;
+  }
+  &_container {
+    padding: 20px 5px;
+    text-align: left;
+  }
+  h2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  &_specie,
+  &_status {
     display: flex;
-    flex-direction: row;
-    width: 450px;
-    position: relative;
-    &_container{
-        padding: 30px 0px;
-        text-align: left;
+    justify-content: start;
+    align-items: center;
+    &--alive {
+      background: green;
     }
-    &_specie,
-    &_status{
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        &--alive{
-            background: green;
-        }
-        &--dead{
-            background-color: red;
-        }
-        &--unknown{
-            background-color: gray;
-        }
-        &_icon{
-            color: red;
-            font-size: 20px;
-            position: relative;
-            
-        }
-        
+    &--dead {
+      background-color: red;
     }
-    &_status{
-        position: absolute;
-        right: 4px;
-        bottom: 7px;
-        display: flex;
-        gap: 5px;
-  
-        &::after{
-            content: "Estado del personaje";
-            background-color: #0003;
-            color: #fff;
-            position: absolute;
-            left: -62px;
-            top: -40px;
-            opacity: 0;
-            visibility: hidden;
-            padding: 5px;
-            transition: 0.3s all;
-        }
-        &:hover{
-            &::after{
-                visibility: visible;
-                opacity: 1;
-            }
-        }
+    &--unknown {
+      background-color: gray;
     }
-    &_more{
-        background: transparent;
-        padding: 5px 20px;
-        border-radius: 15px;
-        color: #fff;
-        border: 1px solid;
+    &_icon {
+      color: red;
+      font-size: 20px;
+      position: relative;
     }
-    &_favorite{
-        position: absolute;
-        left: 0px;
-        top: 0px;
-        .btn-favorite{
-            background: #0b0b0b54;
-            padding: 3px 8px;
-            border-radius: 4px;
-        }
+  }
+  &_status {
+    position: absolute;
+    right: 4px;
+    bottom: 7px;
+    display: flex;
+    gap: 5px;
+  }
+  &_more {
+    background: transparent;
+    padding: 5px 20px;
+    border-radius: 15px;
+    color: #fff;
+    border: 1px solid;
+    &:hover {
+      border-color: #fff;
+      color: #fff;
     }
+  }
+  &_favorite {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    .btn-favorite {
+      background: #0b0b0b54;
+      padding: 3px 8px;
+      border-radius: 4px;
+    }
+  }
 }
