--- a/src/characters/components/CharacterGrid/characterGrid.scss
+++ b/src/characters/components/CharacterGrid/characterGrid.scss
@@ -1,7 +1,19 @@
-.container_characters{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
+.container_characters {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10px;
+}
+.favorites {
+  h2 {
+    margin: 15px 15px 5px;
+    font-size: 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
