--- a/src/scss/generic/_global.scss
+++ b/src/scss/generic/_global.scss
@@ -1,4 +1,6 @@
 body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -7,4 +9,5 @@ body {
 #root {
   width: 100vw;
   height: 100%;
+  max-width: 100%;
 }
