--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -1,6 +1,32 @@
-.hide{
-    display: none;
+.contenedor_loading {
+  display: grid;
+  place-content: center;
+  height: 100vh;
+  color: #000;
+  .cargando {
+    position: relative;
+    color: #fff;
+    margin-top: 2em;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+  }
+
+  .rueda {
+    border: 10px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    border-left-color: transparent;
+    width: 80px;
+    height: 80px;
+    animation: giro 1s linear infinite;
+  }
 }
-.show{
-    display: flex;
+
+@keyframes giro {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
