--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -5,6 +5,7 @@
     z-index: 9;
     background-color: rgb(28, 50, 51);
     box-shadow: 0px -6px 8px 0px #828282;
+    display: flex;
     &_nav {
       display: flex;
       margin: 0px;
@@ -46,13 +47,21 @@
         }
       }
       &_search {
-        input {
-          padding: 10px;
-          background-color: #fff;
-          border-radius: 55px;
-          width: 100%;
-          color: #828282;
-          outline: none;
+        &_container {
+          display: flex;
+          gap: 30px;
+          align-items: center;
+          svg {
+            font-size: 20px;
+          }
+          input {
+            padding: 10px;
+            background-color: #fff;
+            border-radius: 55px;
+            width: 100%;
+            color: #828282;
+            outline: none;
+          }
         }
       }
     }
