--- a/src/characters/components/Filter/filter.scss
+++ b/src/characters/components/Filter/filter.scss
@@ -3,13 +3,30 @@
   justify-content: start;
   gap: 15px;
   padding: 10px 30px;
+  @media (max-width: 768px) {
+    padding: 10px 15px;
+    gap: 10px;
+  }
+  h3 {
+    @media (max-width: 768px) {
+      font-size: 15px;
+    }
+  }
   &_container {
     display: flex;
     gap: 5px;
     align-items: center;
+    @media (max-width: 768px) {
+      max-width: 40%;
+    }
     select {
       padding: 10px 15px;
       border-radius: 15px;
+      @media (max-width: 768px) {
+        font-size: 12px;
+        padding: 5px;
+        width: 100%;
+      }
     }
   }
 }
