--- a/src/characters/components/CharacterCard/characterCard.scss
+++ b/src/characters/components/CharacterCard/characterCard.scss
@@ -1,13 +1,3 @@
-@mixin tablet {
-  @media screen and (max-width: 900px) {
-    @content;
-  }
-}
-@mixin mobile {
-  @media screen and (max-width: 520px) {
-    @content;
-  }
-}
 .card__character {
   text-align: center;
   background: #0a53564f;
@@ -18,7 +8,7 @@
   flex-direction: row;
   width: 400px;
   position: relative;
-  @include mobile() {
+  @media (max-width: 768px) {
     width: 90%;
   }
   img {
