--- a/src/characters/components/SimpleCharacter/character.scss
+++ b/src/characters/components/SimpleCharacter/character.scss
@@ -1,13 +1,3 @@
-@mixin tablet {
-  @media screen and (max-width: 900px) {
-    @content;
-  }
-}
-@mixin mobile {
-  @media screen and (max-width: 520px) {
-    @content;
-  }
-}
 .character {
   display: flex;
   justify-content: center;
@@ -24,10 +14,10 @@
     padding: 50px 20px;
     background-color: #1c3233;
     border-radius: 15px;
-    @include tablet() {
+    @media (max-width: 768px) {
       width: 80%;
     }
-    @include mobile() {
+    @media (max-width: 500px) {
       width: 90%;
     }
   }
